@@ -2,6 +2,13 @@
 \name{NEWS}
 \title{NEWS file for the mlt package}
 
+\section{Changes in Version 1.0-1 (2018-03-20)}{
+  \itemize{
+    \item{\code{estfun, parm = coef(object, fixed = TRUE))} evaluates
+          scores for all model parameters, including fixed ones.}
+  }
+}
+
 \section{Changes in Version 1.0-0 (2018-03-07)}{
   \itemize{
     \item{A paper describing version 1.0-0 of the \pkg{mlt}, \pkg{basefun}, and
